2005-03-10  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Improved TALK for troubleshooting
	flash.

2005-03-09  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Moved the cfi driver into the generic
	driver directory.  There is a machine specific header to handle
	the target controlled constants.

	* Makefile (ENV_CROSS_COMPILE): Fixed the selection of the cross
	compiler so that the environment will override the configured
	value.

2005-03-07  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c: ext2 driver is working.  It supports
	paths and following symlinks.

	* scripts/envmagic: Grooming.  Properly fixed.

	* src/mach-ixp42x/serial.c (ixp42x_serial_write): Waiting for all
	data to write before returning.

	* src/mach-ixp42x/cmd-reset.c (cmd_reset): Resetting services
	before reset so that the nor flash has a chance to enter
	array-read mode.

	* src/mach-lh7952x/cmd-reset.c (cmd_reset): Resetting services
	before reset so that the nor flash has a chance to enter
	array-read mode.

	* src/mach-lh7952x/drv-nor-cfi.c (nor_release): Release function
	added so that cmd-reset will reliably perform.

	* src/drivers/drv-fat.c (fat_find): Fat filename comparisions are
	not case insensitive without requiring the descriptor parser to
	lower-case the path elements.

2005-03-06  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c: A rudimentary ext2 driver is
	implemented.  It has not received much testing.

	* src/apex/command.c (call_command): Added strings to error
	reporting when not CONFIG_SMALL and a string has not yet been set.

2005-03-04  Marc Singer  <elf@buici.com>

	* scripts/envmagic: Removed undesirable paths from the find.
	
2005-03-03  Marc Singer  <elf@buici.com>

	* src/lib/png.c (read_png_row): Decoder working properly with the
	logo and with cc. 

	* src/lib/zlib.c: Fixed the zlib declarations s.t. there is no
	initialized, mutable data.

	* src/lib/png.c: Added png interpreter for the sake of splash
	screen images.
